Thu Dec 21 17:49:24 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tests/TransportCurrent/IIOP/Current_Test_Impl.cpp:
        * tests/TransportCurrent/IIOP/IIOP_Server_Request_Interceptor.h:

          Updated the include files' path to resolve a compilation problem
          in an autoconf (FC4_autoconf) build.

Thu Dec 21 16:03:08 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/TransportCurrent/IIOP_Current_Impl.cpp:

          Added conditional compilation, based upon the presence of
          TAO_HAS_IIOP.  The IIOP-specific current will compile and the
          implementation shall throw CORBA::NO_IMPLEMENT at runtime.

Thu Dec 21 15:32:49 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * tao/TransportCurrent/Current_Impl.h:
        * tao/TransportCurrent/Current_Impl.cpp:
        * tao/TransportCurrent/Current_Loader.h:
        * tao/TransportCurrent/Current_ORBInitializer.h:
        * tao/TransportCurrent/Current_ORBInitializer_Base.h:
        * tao/TransportCurrent/IIOP_Current_Impl.h:

        * tests/TransportCurrent/Framework/Client_Request_Interceptor.h:
        * tests/TransportCurrent/Framework/Client_Request_Interceptor.cpp:
        * tests/TransportCurrent/Framework/ORBInitializer_T.h:
        * tests/TransportCurrent/Framework/Server_Request_Interceptor.h:
        * tests/TransportCurrent/IIOP/IIOP_Server_Request_Interceptor.h:

          Removed a ';' after the closing curly brace of a namespace
          declaration which caused hiccups with gcc 4.0.2.

Thu Dec 21 14:46:46 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/TransportCurrent/TC.idl:
        * tao/TransportCurrent/TC_IIOP.idl:

          Change #include files to be relative to ${TAO_ROOT} like the
          other *.idl / *.pidl files.

Thu Dec 21 14:00:11 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * tao/Makefile.am:

          Regenerated.

Wed Dec 20 21:14:11 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
