@@ -28,12 +28,6 @@
 #include "tao/ORB.h"
 #include "tao/CORBA_String.h"
 
-#if defined(_MSC_VER)
-#pragma warning(push)
-#pragma warning(disable:4250)
-#endif /* _MSC_VER */
-
-
 namespace Test
 {
 
