@@ -30,11 +30,6 @@
 #include "tao/LocalObject.h"
 #include "tao/PI_Server/PI_Server.h"
 
-#if defined(_MSC_VER)
-#pragma warning(push)
-#pragma warning(disable:4250)
-#endif /* _MSC_VER */
-
 #include "ORBInitializer_T.h"
 
 namespace Test
