@@ -21,9 +21,11 @@ testCurrentORBInitializer (int argc, char *argv[])
   CORBA::Object_var obj =
     orb->resolve_initial_references ("TAO::Transport::Current"
                                      ACE_ENV_ARG_PARAMETER);
+  ACE_CHECK;
 
   if (obj.in () == 0)
-    ACE_ERROR_RETURN ((LM_ERROR, ACE_TEXT ("Unable to get the Transport Current\n")), -1);
+    ACE_ERROR_RETURN ((LM_ERROR,
+                       ACE_TEXT ("Unable to get the Transport Current\n")), -1);
 
 
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("testCurrentORBInitializer: OK\n")));
